--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "build": "next build",
     "dev": "next dev",
     "postinstall": "prisma generate",
+    "generate-graphql": "graphql-codegen --config codegen.yml",
     "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.1",
+    "@mui/icons-material": "^5.10.14",
+    "@mui/material": "^5.10.14",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.5.0",
     "@tanstack/react-query": "^4.10.0",
@@ -17,6 +21,8 @@
     "@trpc/next": "10.0.0-rc.4",
     "@trpc/react-query": "10.0.0-rc.4",
     "@trpc/server": "10.0.0-rc.4",
+    "axios": "^1.1.3",
+    "graphql": "^16.6.0",
     "next": "13.0.2",
     "next-auth": "^4.15.1",
     "react": "18.2.0",
@@ -25,6 +31,11 @@
     "zod": "^3.18.0"
   },
   "devDependencies": {
+    "@graphql-codegen/add": "^3.2.1",
+    "@graphql-codegen/cli": "^2.13.12",
+    "@graphql-codegen/typescript": "^2.8.2",
+    "@graphql-codegen/typescript-operations": "^2.5.7",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.6",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
