--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.1",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.14",
     "@next-auth/prisma-adapter": "^1.0.4",
@@ -22,11 +24,14 @@
     "@trpc/react-query": "10.0.0-rc.4",
     "@trpc/server": "10.0.0-rc.4",
     "axios": "^1.1.3",
+    "formik": "^2.2.9",
+    "formik-mui": "5.0.0-alpha.0",
     "graphql": "^16.6.0",
     "next": "13.0.2",
     "next-auth": "^4.15.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sanitize-html": "^2.7.3",
     "superjson": "1.9.1",
     "zod": "^3.18.0"
   },
@@ -39,11 +44,14 @@
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "@types/sanitize-html": "^2.6.2",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "eslint": "^8.26.0",
     "eslint-config-next": "13.0.2",
+    "prettier": "^2.7.1",
     "prisma": "^4.5.0",
+    "sass": "^1.56.1",
     "typescript": "^4.8.4"
   },
   "ct3aMetadata": {
