--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@trpc/next": "10.0.0-rc.4",
     "@trpc/react-query": "10.0.0-rc.4",
     "@trpc/server": "10.0.0-rc.4",
+    "aws-sdk": "^2.1260.0",
     "axios": "^1.1.3",
     "formik": "^2.2.9",
     "formik-mui": "5.0.0-alpha.0",
