--- a/package.json
+++ b/package.json
@@ -16,20 +16,20 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.14",
-    "@next-auth/prisma-adapter": "^1.0.4",
-    "@prisma/client": "^4.5.0",
+    "@next-auth/prisma-adapter": "1.0.5",
+    "@prisma/client": "4.11.0",
     "@tanstack/react-query": "^4.10.0",
-    "@trpc/client": "10.0.0-rc.4",
-    "@trpc/next": "10.0.0-rc.4",
-    "@trpc/react-query": "10.0.0-rc.4",
-    "@trpc/server": "10.0.0-rc.4",
+    "@trpc/client": "10.13.2",
+    "@trpc/next": "10.13.2",
+    "@trpc/react-query": "10.13.2",
+    "@trpc/server": "10.13.2",
     "aws-sdk": "^2.1260.0",
-    "axios": "^1.1.3",
+    "axios": "1.3.4",
     "formik": "^2.2.9",
     "formik-mui": "5.0.0-alpha.0",
-    "graphql": "^16.6.0",
-    "next": "13.0.2",
-    "next-auth": "^4.15.1",
+    "graphql": "16.6.0",
+    "next": "13.2.3",
+    "next-auth": "4.20.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sanitize-html": "^2.7.3",
@@ -51,10 +51,10 @@
     "@typescript-eslint/parser": "^5.33.0",
     "eslint": "^8.26.0",
     "eslint-config-next": "13.0.2",
-    "prettier": "^2.7.1",
-    "prisma": "^4.5.0",
-    "sass": "^1.56.1",
-    "typescript": "^4.8.4"
+    "prettier": "2.8.4",
+    "prisma": "4.11.0",
+    "sass": "1.58.3",
+    "typescript": "4.9.5"
   },
   "ct3aMetadata": {
     "initVersion": "6.10.1"
