--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "react-dom": "18.2.0",
     "sanitize-html": "^2.7.3",
     "superjson": "1.9.1",
-    "zod": "^3.18.0"
+    "zod": "3.20.6"
   },
   "devDependencies": {
     "@graphql-codegen/add": "^3.2.1",
